updated personal info, added new announcements, etc.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,3 +26,13 @@
   doi = {10.1017/S0305000925100226},
   url = {https://doi.org/10.1017/S0305000925100226}
 }
+
+@inproceedings{luo_toappear_bucld50,
+  abbr  ={BUCLD50},
+  title     = {What modulates toddlers' use of familiar words in resolving novel noun reference? A preferential looking study},
+  author = {Luo, L. and Yang, X. and Christie, S. and Shi, R.},
+  booktitle = {Proceedings of the 50th Annual Boston University Conference on Language Development},
+  year      = {To appear},
+  publisher = {Cascadilla Press},
+  address   = {Somerville, MA},
+}
